tests/invalid/invalid-stateflow-transition.orgs
stateflow BrokenFlow

  states
    new
    done

  transitions
    new -> missing
